# Memories_Serves

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: ai.html  api.html  index.html  operations.html  package-lock.json  package.json  vite.config.js
docs/public/: ai-integration.md
docs/src/: main.js  styles.css
scripts/: bootstrap.sh  github-release-webhook.py  install-release.sh  memories-serves.service
src/: main.rs
